--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "ua-parser-js": "^1.0.38",
+    "use-debounce": "^10.0.1",
     "yup": "^1.4.0",
     "zod": "^3.23.8"
   },
